# gcalx

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/skills/gcalx/: SKILL.md
src/gcalx/: __init__.py  __main__.py  auth.py  cli.py  config.py
src/gcalx/calendar/: client.py  commands.py  formatters.py
src/gcalx/shared/: cache.py  dates.py  deps.py  printer.py  utils.py
src/gcalx/tasks/: client.py  commands.py  formatters.py
tests/: test_cache.py  test_clients.py  test_config.py  test_dates.py  test_formatters.py  test_utils.py
